fix bugs in dark mode

--- a/src/configs/colors/light/theme.css
+++ b/src/configs/colors/light/theme.css
@@ -1,11 +1,11 @@
 @import "./colors.css";
 
 :root {
-  --white: #ffffff;
-  --black: #000000;
+  --white: 0 0% 100%;
+  --black: 0 0% 0%;
 
-  --background: #edf5fd;
-  --foreground: #030303;
+  --background: 210 80% 96%;
+  --foreground: 0 0% 1%;
 
   --border: 214.3 31.8% 91.4%;
 
